--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -280,7 +280,10 @@ ul{
     ),
     url(../multimedia/fondo-textura-grunge_1048-9279.jpg);
     padding-top: 3.5rem;
-    
+}
+
+.seccion__carousel--foto{
+    width: 100%;
 }
 
 
