--- a/css/estilos.css
+++ b/css/estilos.css
@@ -292,6 +292,9 @@ ul {
   background-image: linear-gradient(343deg, #ca247156, #37c5b04d), url(../multimedia/fondo-textura-grunge_1048-9279.jpg);
   padding-top: 3.5rem; }
 
+.seccion__carousel--foto {
+  width: 100%; }
+
 .section__aftermovie {
   /*
     background-image: linear-gradient(
