--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -279,7 +279,7 @@ ul{
     background-image: linear-gradient(343deg,#ca247156,#37c5b04d
     ),
     url(../multimedia/fondo-textura-grunge_1048-9279.jpg);
-    padding-top: 3.5rem;
+    padding: 3.5rem 0;
 }
 
 .seccion__carousel--foto{
