--- a/css/estilos.css
+++ b/css/estilos.css
@@ -290,7 +290,8 @@ ul {
 
 .seccion__carousel {
   background-image: linear-gradient(343deg, #ca247156, #37c5b04d), url(../multimedia/fondo-textura-grunge_1048-9279.jpg);
-  padding: 3.5rem 0; }
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem; }
 
 .seccion__carousel--foto {
   width: 100%; }
