--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -279,7 +279,8 @@ ul{
     background-image: linear-gradient(343deg,#ca247156,#37c5b04d
     ),
     url(../multimedia/fondo-textura-grunge_1048-9279.jpg);
-    padding: 3.5rem 0;
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
 }
 
 .seccion__carousel--foto{
@@ -417,6 +418,8 @@ ul{
             }
         }
 }
+
+
 
 .sin__señal__texto{
     flex-direction: column;
