seccion noticias home

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,3 +2,11 @@ $color__navitem: #06aebc;
 $color__navitem__hover:#056a74;
 
 $box__shadow:20px 20px 20px -15px rgba(0,0,0,0.85);  
+
+$regal-blue: #034378;
+$san-juan: #2d4e68;
+$bermuda: #249abebd;
+$white: #fff;
+$black: #000;
+$open-sans: 'Open Sans',
+sans-serif;
