--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;600;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Patua+One&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
 .nav__menu--color {
   background-color: rgba(0, 0, 0, 0.301); }
 
@@ -57,6 +58,120 @@
   color: #056a74;
   transition: .7s; }
 
+.icono-footer {
+  color: white;
+  font-size: 2.5rem; }
+
+.icono-facebook:hover {
+  color: #3b5998;
+  transform: scale(1.2);
+  transition: .6s; }
+
+.icono-spotify:hover {
+  color: #1DB954;
+  transform: scale(1.2);
+  transition: .6s; }
+
+.icono-instagram:hover {
+  color: #c13584;
+  transform: scale(1.2);
+  transition: .6s; }
+
+.icono-twitter:hover {
+  color: #00acee;
+  transform: scale(1.2);
+  transition: .6s; }
+
+.icono-youtube:hover {
+  color: #c4302b;
+  transform: scale(1.2);
+  transition: .6s; }
+
+#footer a {
+  color: whitesmoke; }
+
+.prueba__carta {
+  margin-bottom: 3rem; }
+  .prueba__carta .row {
+    max-width: 100rem;
+    margin: 50px auto 0; }
+  @media (min-width: 700px) {
+    .prueba__carta .row {
+      max-width: 100rem;
+      margin: 0 3.5rem; } }
+  .prueba__carta .card {
+    margin-bottom: 2rem;
+    width: 100%; }
+    .prueba__carta .card .menu-content li {
+      display: inline-block; }
+    .prueba__carta .card .menu-content a {
+      color: #fff; }
+    .prueba__carta .card .menu-content span {
+      position: absolute;
+      left: 50%;
+      top: 0;
+      font-size: 10px;
+      font-weight: 700;
+      font-family: 'Open Sans';
+      transform: translate(-50%, 0); }
+    .prueba__carta .card .noticia__carta--1, .prueba__carta .card .noticia__carta--2, .prueba__carta .card .noticia__carta--3 {
+      background-color: #fff;
+      min-height: 420px;
+      position: relative;
+      overflow: hidden;
+      box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2); }
+      .prueba__carta .card .noticia__carta--1:hover .data, .prueba__carta .card .noticia__carta--2:hover .data, .prueba__carta .card .noticia__carta--3:hover .data {
+        transform: translateY(0); }
+    .prueba__carta .card .data {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      transform: translateY(calc(70px + 1em));
+      transition: transform 0.3s; }
+      .prueba__carta .card .data .content {
+        padding: 1em;
+        position: relative;
+        z-index: 1; }
+    .prueba__carta .card .author {
+      font-size: 12px; }
+    .prueba__carta .card .title {
+      margin-top: 10px; }
+    .prueba__carta .card .text {
+      height: 70px;
+      margin: 0; }
+    .prueba__carta .card input[type='checkbox'] {
+      display: none; }
+    .prueba__carta .card input[type='checkbox']:checked + .menu-content {
+      transform: translateY(-60px); }
+  .prueba__carta .noticia__carta .noticia__carta--1 {
+    background-image: url(../multimedia/nota-1.jpg);
+    background-size: contain; }
+  .prueba__carta .noticia__carta .noticia__carta--2 {
+    background-image: url(../multimedia/nota-2.jpg);
+    background-size: contain; }
+  .prueba__carta .noticia__carta .noticia__carta--3 {
+    background-image: url(../multimedia/nota-3.jpg);
+    background-size: contain; }
+  .prueba__carta .noticia__carta .date {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #249abebd;
+    color: #fff;
+    padding: 0.5em; }
+    .prueba__carta .noticia__carta .date span {
+      display: block;
+      text-align: center; }
+    .prueba__carta .noticia__carta .date .day {
+      font-weight: 700;
+      font-size: 1.2rem;
+      text-shadow: 2px 3px 2px rgba(0, 0, 0, 0.18); }
+  .prueba__carta .noticia__carta .content {
+    background-color: #fff;
+    box-shadow: 0 5px 30px 10px rgba(0, 0, 0, 0.3); }
+  .prueba__carta .noticia__carta .title a {
+    color: gray; }
+
 img {
   width: 100%; }
 
@@ -97,6 +212,9 @@ img {
 
 ul {
   list-style-type: none; }
+
+.background__fixed {
+  background-attachment: fixed; }
 
 #galeriaBandalos {
   display: grid;
@@ -296,34 +414,26 @@ ul {
 .seccion__carousel--foto {
   width: 100%; }
 
-.section__aftermovie {
-  /*
-    background-image: linear-gradient(
-    #f25ca271, 
-    #f25ca271
-    ),
-    url(../multimedia/fondo-textura-grunge_1048-9279.jpg);*/ }
-  .section__aftermovie .section__aftermovie--video {
-    filter: grayscale(0.9); }
-  .section__aftermovie .letra {
-    position: relative; }
-  .section__aftermovie .seccion__aftermovie_letrachina {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /*top: 25%;
-        left: 0;
-        right: 0;
-        bottom: 0;*/
-    margin: auto;
-    width: 20rem; }
-  .section__aftermovie .seccion__aftermovie__subtitulo {
-    font-family: 'Patua One', cursive;
-    color: white;
-    font-size: 1.2rem;
-    letter-spacing: .53rem;
-    text-shadow: 2px 5px 5px rgba(0, 0, 0, 0.8);
-    text-transform: uppercase; }
+.section__aftermovie .section__aftermovie--video {
+  filter: grayscale(0.9); }
+
+.section__aftermovie .letra {
+  position: relative; }
+
+.section__aftermovie .seccion__aftermovie_letrachina {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  width: 20rem; }
+
+.section__aftermovie .seccion__aftermovie__subtitulo {
+  font-family: 'Patua One', cursive;
+  color: white;
+  font-size: 1.2rem;
+  letter-spacing: .53rem;
+  text-shadow: 2px 5px 5px rgba(0, 0, 0, 0.8);
+  text-transform: uppercase; }
 
 @media (min-width: 700px) {
   .section__aftermovie .seccion__aftermovie_letrachina {
@@ -351,24 +461,20 @@ ul {
   padding: 0 3rem 3rem 3rem; }
 
 .reproductor__inicio__img--estilos {
-  border-radius: 8px; }
+  border-radius: 12px; }
   .reproductor__inicio__img--estilos img {
-    border-radius: 8px;
+    border-radius: 12px;
     -webkit-box-shadow: 15px 15px 33px -15px rgba(49, 28, 28, 0.85);
     -moz-box-shadow: 15px 15px 33px -15px rgba(0, 0, 0, 0.85);
     box-shadow: 15px 15px 33px -15px rgba(0, 0, 0, 0.85); }
   .reproductor__inicio__img--estilos img:hover {
-    box-shadow: 0 0.9rem 0.8rem rgba(0, 0, 0, 0.8); }
-  .reproductor__inicio__img--estilos .reproductor__inicio__img--estilos {
+    box-shadow: 0 0.9rem 0.8rem rgba(0, 0, 0, 0.8);
     transform: scale(1.1);
     transition: 1.2s; }
-  .reproductor__inicio__img--estilos .reproductor__inicio__boton__play {
-    position: absolute;
-    color: rgba(0, 0, 0, 0.719); }
-  .reproductor__inicio__img--estilos .reproductor__inicio__boton__play:hover {
+  .reproductor__inicio__img--estilos .reproductor__inicio__img--estilos:hover {
+    box-shadow: 0 0.9rem 0.8rem rgba(0, 0, 0, 0.8);
     transform: scale(1.1);
-    transition: 1.2s;
-    color: rgba(0, 0, 0, 0.85); }
+    transition: 1.2s; }
   @media (min-width: 790px) {
     .reproductor__inicio__img--estilos img {
       height: 30rem; }
@@ -380,6 +486,15 @@ ul {
       transform: scale(1.5); }
     .reproductor__inicio__img--estilos .reproductor__inicio__boton__play:hover {
       transform: scale(1.7); } }
+
+.reproductor__inicio__boton__play {
+  position: absolute;
+  color: rgba(0, 0, 0, 0.719); }
+
+.reproductor__inicio__boton__play:hover {
+  transform: scale(1.1);
+  transition: 1.2s;
+  color: rgba(0, 0, 0, 0.85); }
 
 .sin__señal__texto {
   flex-direction: column;
@@ -441,15 +556,6 @@ ul {
   transform: translateY(3rem);
   background-repeat: no-repeat; }
 
-/*
-@media (min-width:780px){
-    .separacion__abajo__sinseñal{
-        background-image: url(../multimedia/division-nueva-arriba.png) ;
-        height: 5rem;
-        background-position: bottom;
-        transform: translateY(4rem);
-    }  
-}*/
 .separacion__abajo--estilo {
   background-image: url(../multimedia/division-arriba.png);
   height: 5rem;
@@ -457,23 +563,6 @@ ul {
   /*background-position: bottom;*/
   transform: translateY(-0.5rem); }
 
-.noticias__3 {
-  display: none; }
-
-@media (min-width: 1000px) {
-  .noticias__3 {
-    display: block; } }
-
-/*
-@media (min-width:1200px){
-    .separacion__abajo--estilo{
-        height: 7rem;
-    }
-    .separacion__arriba--estilo{
-        height: 7rem;
-        transform: translateY(-6.5rem);
-    }
-}*/
 .subtitulo__pag__bandalos {
   width: 100%;
   height: 8rem;
@@ -497,7 +586,7 @@ ul {
   .subtitulo__pag__bandalos--estilos {
     font-size: 4rem; } }
 
-.nuevo {
+.seccion__bandalos__botones {
   display: flex;
   width: 100%;
   justify-content: space-around;
@@ -505,7 +594,7 @@ ul {
   background-image: url(../multimedia/fondo4.jpg);
   height: 15em; }
 
-.bandalos__botones__estilos {
+.bandalos__botones--estilos {
   border-radius: 2rem;
   background-image: url(../multimedia/fondo3.png);
   background-position: inherit;
@@ -515,52 +604,58 @@ ul {
   font-weight: bold;
   font-size: 1.1rem; }
 
-.bandalos__botones__estilos:hover {
+.bandalos__botones--estilos:hover {
   transform: scale(1.1);
   color: white;
   transition: .7s; }
 
 @media (min-width: 700px) {
-  .nuevo {
+  .seccion__bandalos__botones {
     justify-content: center; }
-  .bandalos__botones__estilos {
+  .bandalos__botones--estilos {
     margin: 0 2rem; }
-  .bandalos__botones__estilos {
+  .bandalos__botones--estilos {
     font-size: 1.4rem;
     padding: 1.2rem;
     width: 15rem; } }
 
-.icono-footer {
-  color: white;
-  font-size: 2.5rem; }
-
-.icono-facebook:hover {
-  color: #3b5998;
-  transform: scale(1.2);
-  transition: .6s; }
-
-.icono-spotify:hover {
-  color: #1DB954;
-  transform: scale(1.2);
-  transition: .6s; }
-
-.icono-instagram:hover {
-  color: #c13584;
-  transform: scale(1.2);
-  transition: .6s; }
-
-.icono-twitter:hover {
-  color: #00acee;
-  transform: scale(1.2);
-  transition: .6s; }
-
-.icono-youtube:hover {
-  color: #c4302b;
-  transform: scale(1.2);
-  transition: .6s; }
-
 #letra-china-bandalos {
   background-color: teal; }
 
-#footer a {
-  color: whitesmoke; }
+/*
+.noticias__3{
+    display: none;
+}
+@media (min-width:1000px){
+    .noticias__3{
+        display: block;
+    }
+}*/
+.noticias {
+  background-image: url(../multimedia/fondo4.jpg); }
+  .noticias .card .card-body .card-text {
+    font-size: .9rem;
+    font-weight: 400;
+    color: #181818; }
+  .noticias .noticias__nota__info {
+    background-color: #faebd72b; }
+  .noticias .card-title {
+    color: #444447;
+    font-size: 1rem;
+    font-family: initial; }
+
+.noticias__botones--estilos {
+  border-radius: 0.4rem;
+  background-image: url(../multimedia/fondo1.jpg);
+  background-position: center;
+  background-size: cover;
+  box-shadow: 4px 0px 7px 0px #8b9799f0;
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  letter-spacing: 0.1rem; }
+
+.noticias__botones--estilos:hover {
+  transform: scale(1.1);
+  color: white;
+  transition: .7s; }
