--- a/scss/_tipografias.scss
+++ b/scss/_tipografias.scss
@@ -6,3 +6,5 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Patua+One&display=swap');
 
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
+
