--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,7 +1,8 @@
 @import "variables"; 
 @import "header";
 @import "tipografias";
-
+@import "footer"; 
+@import "seccion__noticias";
 
 img{
     width: 100%;
@@ -53,6 +54,11 @@ img{
 
 ul{
     list-style-type: none;
+}
+
+
+.background__fixed{
+    background-attachment: fixed;
 }
 
 
@@ -289,12 +295,7 @@ ul{
 
 
 
-.section__aftermovie{/*
-    background-image: linear-gradient(
-    #f25ca271, 
-    #f25ca271
-    ),
-    url(../multimedia/fondo-textura-grunge_1048-9279.jpg);*/
+.section__aftermovie{
     .section__aftermovie--video{
         filter: grayscale(.9);   
     }
@@ -305,10 +306,6 @@ ul{
         display: flex;
         flex-direction: column;
         align-items: center;
-        /*top: 25%;
-        left: 0;
-        right: 0;
-        bottom: 0;*/
         margin: auto;
         width: 20rem;
     }
@@ -362,20 +359,15 @@ ul{
 #sin__senal{
     background-image:
         url(../multimedia/fondo4.jpg);
-        padding: 0 3rem 3rem 3rem;
+        padding: 0 3rem 3rem 3rem; 
 }
 
 
 
-
-
 .reproductor__inicio__img--estilos{
-    border-radius:8px ;
-    
-
+    border-radius:12px ;
         img{
-            
-            border-radius: 8px;
+            border-radius: 12px;
             -webkit-box-shadow: 15px 15px 33px -15px rgba(49, 28, 28, 0.85);
             -moz-box-shadow: 15px 15px 33px -15px rgba(0,0,0,0.85);
             box-shadow: 15px 15px 33px -15px rgba(0,0,0,0.85);   
@@ -383,22 +375,14 @@ ul{
         }
         img:hover{
             box-shadow: 0 .9rem .8rem rgba(0, 0, 0, 0.8);   
-            
-        }
-        .reproductor__inicio__img--estilos{
             transform: scale(1.1);
             transition: 1.2s;
         }
-        .reproductor__inicio__boton__play{
-            position: absolute;
-            color: rgba(0, 0, 0, 0.719);
-        }
-        .reproductor__inicio__boton__play:hover{
+        .reproductor__inicio__img--estilos:hover{
+            box-shadow: 0 .9rem .8rem rgba(0, 0, 0, 0.8);
             transform: scale(1.1);
             transition: 1.2s;
-            color: rgba(0,0,0,0.85);
         }
-
         @media (min-width:790px) {
             img{
                 height: 30rem;
@@ -417,8 +401,18 @@ ul{
                 transform: scale(1.7);
             }
         }
-}
+    }
 
+
+    .reproductor__inicio__boton__play{
+        position: absolute;
+        color: rgba(0, 0, 0, 0.719);
+    }
+    .reproductor__inicio__boton__play:hover{
+        transform: scale(1.1);
+        transition: 1.2s;
+        color: rgba(0,0,0,0.85);
+    }        
 
 
 .sin__señal__texto{
@@ -500,16 +494,6 @@ ul{
     transform: translateY(3rem);
     background-repeat: no-repeat;
 }
-/*
-@media (min-width:780px){
-    .separacion__abajo__sinseñal{
-        background-image: url(../multimedia/division-nueva-arriba.png) ;
-        height: 5rem;
-        background-position: bottom;
-        transform: translateY(4rem);
-    }  
-}*/
-
 
 .separacion__abajo--estilo {
   background-image: url(../multimedia/division-arriba.png) ;
@@ -518,26 +502,6 @@ ul{
   /*background-position: bottom;*/
   transform: translateY(-.5rem);
 }
-
-
-.noticias__3{
-    display: none;
-}
-@media (min-width:1000px){
-    .noticias__3{
-        display: block;
-    }
-}
-/*
-@media (min-width:1200px){
-    .separacion__abajo--estilo{
-        height: 7rem;
-    }
-    .separacion__arriba--estilo{
-        height: 7rem;
-        transform: translateY(-6.5rem);
-    }
-}*/
 
 .subtitulo__pag__bandalos{
     width: 100%;
@@ -574,7 +538,7 @@ ul{
 
 
 
-.nuevo{
+.seccion__bandalos__botones{
     display: flex;
     width: 100%;
     justify-content: space-around;
@@ -585,8 +549,7 @@ ul{
     height: 15em;
 }
 
-
-.bandalos__botones__estilos{
+.bandalos__botones--estilos{
     
     border-radius: 2rem;
     background-image: url(../multimedia/fondo3.png);
@@ -598,7 +561,74 @@ ul{
     font-size:1.1rem;
     
 }
-.bandalos__botones__estilos:hover{
+.bandalos__botones--estilos:hover{
+    transform: scale(1.1);
+    color:white;
+    transition: .7s;
+}
+
+@media (min-width:700px){
+    .seccion__bandalos__botones{
+        justify-content: center;
+        
+    }
+    .bandalos__botones--estilos{
+        margin: 0 2rem;
+    }
+    .bandalos__botones--estilos{
+        font-size:1.4rem ;
+        padding: 1.2rem;
+        width: 15rem;
+    }
+}
+
+#letra-china-bandalos{
+    background-color: teal;
+}
+
+/*
+.noticias__3{
+    display: none;
+}
+@media (min-width:1000px){
+    .noticias__3{
+        display: block;
+    }
+}*/
+
+.noticias{
+    background-image: url(../multimedia/fondo4.jpg);
+    .card .card-body .card-text {
+    font-size: .9rem;
+    font-weight: 400;
+    color:  rgb(24, 24, 24);
+    }
+    .noticias__nota__info{
+        background-color: #faebd72b;
+    }
+    .card-title{
+        color:  rgb(68, 68, 71);
+        font-size: 1rem;
+        font-family:initial; 
+    }
+    
+}
+
+
+
+
+.noticias__botones--estilos{
+    border-radius: 0.4rem;
+    background-image: url(../multimedia/fondo1.jpg);
+    background-position: center;
+    background-size: cover;
+    box-shadow: 4px 0px 7px 0px #8b9799f0;
+    color: white;
+    font-weight:bold;
+    font-size:1rem;
+    letter-spacing: 0.1rem;
+}
+.noticias__botones--estilos:hover{
     transform: scale(1.1);
     color:white;
     transition: .7s;
@@ -607,59 +637,7 @@ ul{
 
 
 
-@media (min-width:700px){
-    .nuevo{
-        justify-content: center;
-        
-    }
-    .bandalos__botones__estilos{
-        margin: 0 2rem;
-    }
-    .bandalos__botones__estilos{
-        font-size:1.4rem ;
-        padding: 1.2rem;
-        width: 15rem;
-    }
-}
 
 
-.icono-footer{
-    color:white;
-    font-size: 2.5rem;
-}
-
-.icono-facebook:hover{
-    color: #3b5998;
-    transform: scale(1.2);
-    transition: .6s;
-}
-.icono-spotify:hover{
-    color: #1DB954;
-    transform: scale(1.2);
-    transition: .6s;
-}
-.icono-instagram:hover{
-    color:  #c13584;
-    transform: scale(1.2);
-    transition: .6s;
-}
-.icono-twitter:hover{
-    color: #00acee;
-    transform: scale(1.2);
-    transition: .6s;
-}
-.icono-youtube:hover{
-    color: #c4302b;
-    transform: scale(1.2);
-    transition: .6s;
-}
 
 
-#letra-china-bandalos{
-    background-color: teal;
-}
-
-
-#footer a{
-    color: whitesmoke;
-}
