correccion seccion 1 musica

--- a/scss/_musica.scss
+++ b/scss/_musica.scss
@@ -1,13 +1,14 @@
 .musica{
     background-image: url(../multimedia/fondo4.jpg);
     background-attachment: fixed;
+    margin: 0 0.5rem 0.5rem 1rem;
 }
 
 
 
 .fa-angle-down:before{
     position: absolute;
-   right: 2rem;
+    right: 1.2rem;
     top: 1rem; 
 }
 
