completado de disco 2 en pagina musica

--- a/scss/_musica.scss
+++ b/scss/_musica.scss
@@ -1,8 +1,67 @@
+
 .musica{
     background-image: url(../multimedia/fondo4.jpg);
     background-attachment: fixed;
-    margin: 0 0.5rem 0.5rem 1rem;
+    
 }
+
+.musica__portada__disco{
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 1.5rem;
+    }
+    
+    .disco__subtitulo{
+        font-family: 'Dancing Script', cursive;
+        font-size: 4.2rem;
+        letter-spacing: .2rem;
+        /*
+        -webkit-text-stroke: 1px #63afe1;*/
+        color: #000000; 
+        text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.562);
+         
+    }
+    
+    .musica__portada__bach--estilos{
+            background-image: url(../multimedia/bach.jpg) ;
+            background-repeat: no-repeat;
+            background-size: contain;
+            width: 20rem;
+            height: 20rem;
+            
+        }
+.card-header{
+    border-bottom: none;
+}
+
+.accordion>.card{
+    background-color: transparent;
+}
+
+
+.musica__2{
+    
+    background: radial-gradient(circle, rgba(252,101,78,0.75218837535014) 15%, rgba(255,63,50,1) 100%);
+    background-attachment: fixed;
+}
+
+.musica__portada__aire--estilos{
+    background-image: url(../multimedia/en-el-aire.jpg) ;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 20rem;
+    height: 20rem;
+    
+}
+
+.disco__aire--estilos{
+    color: white;
+}
+
+
+
+
 
 
 
@@ -17,7 +76,7 @@
 }
 
 .titulo__cancion--estilos{
-    background: rgb(249,121,85);
+    
     background: linear-gradient(0deg, rgba(249,121,85,0.4944852941176471) 5%, rgba(49,134,255,1) 32%);
 }
 
