--- a/css/estilos.css
+++ b/css/estilos.css
@@ -174,8 +174,49 @@
 
 .musica {
   background-image: url(../multimedia/fondo4.jpg);
-  background-attachment: fixed;
-  margin: 0 0.5rem 0.5rem 1rem; }
+  background-attachment: fixed; }
+
+.musica__portada__disco {
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1.5rem; }
+
+.disco__subtitulo {
+  font-family: 'Dancing Script', cursive;
+  font-size: 4.2rem;
+  letter-spacing: .2rem;
+  /*
+        -webkit-text-stroke: 1px #63afe1;*/
+  color: #000000;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.562); }
+
+.musica__portada__bach--estilos {
+  background-image: url(../multimedia/bach.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 20rem;
+  height: 20rem; }
+
+.card-header {
+  border-bottom: none; }
+
+.accordion > .card {
+  background-color: transparent; }
+
+.musica__2 {
+  background: radial-gradient(circle, rgba(252, 101, 78, 0.752188) 15%, #ff3f32 100%);
+  background-attachment: fixed; }
+
+.musica__portada__aire--estilos {
+  background-image: url(../multimedia/en-el-aire.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 20rem;
+  height: 20rem; }
+
+.disco__aire--estilos {
+  color: white; }
 
 .fa-angle-down:before {
   position: absolute;
@@ -186,7 +227,6 @@
   font-family: "Josefin Sans", sans-serif; }
 
 .titulo__cancion--estilos {
-  background: #f97955;
   background: linear-gradient(0deg, rgba(249, 121, 85, 0.494485) 5%, #3186ff 32%); }
 
 .rgba-grey-light {
@@ -586,7 +626,7 @@ ul {
 
 .subtitulo__pag__bandalos {
   width: 100%;
-  height: 8rem;
+  height: 6rem;
   background-image: url(../multimedia/fondo4.jpg); }
 
 .subtitulo__pag__bandalos--estilos {
