--- a/scss/_musica.scss
+++ b/scss/_musica.scss
@@ -33,10 +33,16 @@
         }
 .card-header{
     border-bottom: none;
+    
 }
 
 .accordion>.card{
     background-color: transparent;
+    
+}
+
+.accordion>.card>.card-header{
+    border-radius: .3rem;
 }
 
 
