--- a/scss/_musica.scss
+++ b/scss/_musica.scss
@@ -31,6 +31,11 @@
             height: 20rem;
             
         }
+    .musica__fondo__bach--color{
+        background: rgb(16,75,172);
+        background: linear-gradient(166deg, rgba(16,75,172,0.8530287114845938) 19%, rgba(18,55,84,0.8194152661064426) 71%);
+    }
+
 .card-header{
     border-bottom: none;
     
@@ -58,17 +63,51 @@
     background-size: contain;
     width: 20rem;
     height: 20rem;
+}
+
+.titulo__cancion__aire--estilos{
+    background: rgb(97,59,69);
+    background: linear-gradient(20deg, rgba(97,59,69,1) 9%, rgba(102,77,103,0.3348214285714286) 85%);
+
+}
+
+
+.musica__3{
+    background: rgb(89,242,144);
+    background: radial-gradient(circle, rgba(89,242,144,0.5028886554621849) 7%, rgba(112,108,107,0.18916316526610644) 39%, rgba(250,250,250,0.9286589635854342) 57%);
+   
+}
+
+.musica__portada__nunca--estilos{
+    background-image: url(../multimedia/nunca-estuve-aca.jpg) ;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 20rem;
+    height: 20rem;
     
+}
+
+.titulo__cancion__nunca--estilos{
+    background: rgb(112,107,109);
+    background: linear-gradient(20deg, rgba(112,107,109,0.7213760504201681) 47%, rgba(77,103,87,0.20877100840336138) 96%);
+
+
+}
+
+.musica__fondo__nunca--color{
+    background: rgb(120,119,119);
+    background: linear-gradient(20deg, rgba(120,119,119,1) 9%, rgba(158,154,158,0.948266806722689) 85%);
+
+
+}
+
+.disco__nunca--estilos{
+
 }
 
 .disco__aire--estilos{
     color: white;
 }
-
-
-
-
-
 
 
 .fa-angle-down:before{
@@ -82,12 +121,10 @@
 }
 
 .titulo__cancion--estilos{
-    
-    background: linear-gradient(0deg, rgba(249,121,85,0.4944852941176471) 5%, rgba(49,134,255,1) 32%);
+    background-color: rgba(49,134,255,.95);
 }
 
 
-.rgba-grey-light{
-    background: rgb(16,75,172);
-background: linear-gradient(166deg, rgba(16,75,172,0.8530287114845938) 19%, rgba(18,55,84,0.8194152661064426) 71%);
-}
+
+
+
