--- a/css/estilos.css
+++ b/css/estilos.css
@@ -259,6 +259,24 @@
 .titulo__cancion--estilos {
   background-color: rgba(49, 134, 255, 0.95); }
 
+.videoclips .videos__portada--estilos {
+  height: 14rem; }
+
+.videoclips .videos__portada--estilos:hover {
+  transform: scale(1.02);
+  transition: 1s; }
+
+.videoclips .video__carta {
+  padding-right: 1.2rem;
+  padding-left: 1.2rem; }
+
+.modal {
+  top: 20%; }
+
+@media (min-width: 700px) {
+  .modal {
+    top: 0; } }
+
 img {
   width: 100%; }
 
@@ -555,13 +573,13 @@ ul {
     -moz-box-shadow: 15px 15px 33px -15px rgba(0, 0, 0, 0.85);
     box-shadow: 15px 15px 33px -15px rgba(0, 0, 0, 0.85); }
   .reproductor__inicio__img--estilos img:hover {
-    box-shadow: 0 0.9rem 0.8rem rgba(0, 0, 0, 0.8);
-    transform: scale(1.1);
-    transition: 1.2s; }
+    box-shadow: 0 0.9rem 0.8rem rgba(0, 0, 0, 0.6);
+    transform: scale(1.05);
+    transition: 1s; }
   .reproductor__inicio__img--estilos .reproductor__inicio__img--estilos:hover {
     box-shadow: 0 0.9rem 0.8rem rgba(0, 0, 0, 0.8);
-    transform: scale(1.1);
-    transition: 1.2s; }
+    transform: scale(1.05);
+    transition: 1s; }
   @media (min-width: 790px) {
     .reproductor__inicio__img--estilos img {
       height: 30rem; }
@@ -570,9 +588,9 @@ ul {
       transform: scale(1.015);
       transition: 1.2s; }
     .reproductor__inicio__img--estilos .reproductor__inicio__boton__play {
-      transform: scale(1.5); }
+      transform: scale(1.3); }
     .reproductor__inicio__img--estilos .reproductor__inicio__boton__play:hover {
-      transform: scale(1.7); } }
+      transform: scale(1.4); } }
 
 .reproductor__inicio__boton__play {
   position: absolute;
