--- a/scss/_video.scss
+++ b/scss/_video.scss
@@ -11,6 +11,25 @@
         padding-right: 1.2rem;
         padding-left: 1.2rem;
     }
+    .videoclips__titulo__video{
+        position: absolute;
+        text-align: center;
+        background-color: rgba(0,0,0,0.6);
+        width: 100%;
+        padding: .3rem;
+        color: white;
+        bottom: 0;
+        margin-bottom: 0.8rem;  
+        text-transform: uppercase;
+        font-family: "Patua One", sans-serif;
+        font-size: 1.5rem;
+    }
+    .videoclips__boton{
+        color:  rgba(253, 253, 253, 0.65);
+    }
+    .videoclips__boton:hover{
+        color:rgba(253, 253, 253, 0.9);
+    }
     
 }
 
