--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,7 +12,8 @@
   transition: 1.5s; }
 
 .nav__logo {
-  width: 10rem; }
+  width: 10rem;
+  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.8)); }
 
 .nav__logo:hover {
   color: #056a74; }
@@ -176,6 +177,10 @@
   background-image: url(../multimedia/fondo4.jpg);
   background-attachment: fixed; }
 
+.musica__columna {
+  margin-right: 0.2rem;
+  margin-left: 0.2rem; }
+
 .musica__portada__disco {
   justify-content: center;
   flex-direction: column;
@@ -186,10 +191,9 @@
   font-family: 'Dancing Script', cursive;
   font-size: 4.2rem;
   letter-spacing: .2rem;
-  /*
-        -webkit-text-stroke: 1px #63afe1;*/
   color: #000000;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.562); }
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.562);
+  text-align: center; }
 
 .musica__portada__bach--estilos {
   background-image: url(../multimedia/bach.jpg);
