--- a/css/estilos.css
+++ b/css/estilos.css
@@ -300,6 +300,117 @@
   .modal {
     top: 0; } }
 
+.fechas {
+  background-image: url(../multimedia/gui-2-3.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+  height: 100%; }
+  .fechas .row {
+    background-color: rgba(37, 41, 39, 0.5);
+    color: white; }
+  .fechas .fechas__dia__numero {
+    display: flex;
+    align-items: center; }
+    .fechas .fechas__dia__numero h4 {
+      font-family: "Oswald", sans-serif;
+      font-size: 2rem;
+      margin: 0;
+      padding: .3rem; }
+  .fechas .fechas__dia__mes {
+    display: flex;
+    flex-direction: column;
+    border-right: 5px solid white;
+    padding-right: .4rem;
+    font-size: 1rem;
+    font-weight: bolder;
+    margin-left: .5rem;
+    color: rgba(255, 255, 255, 0.65); }
+  .fechas .fechas__lugar p {
+    margin: 0;
+    margin-left: .4rem;
+    font-size: 1rem;
+    color: rgba(255, 255, 255, 0.65);
+    font-weight: bolder; }
+  .fechas .btn {
+    border: 2px solid white; }
+  .fechas .fechas__boton {
+    padding: .7rem;
+    margin: 1.5rem;
+    border-radius: 0.4rem;
+    font-size: .9rem;
+    box-shadow: none;
+    color: rgba(255, 255, 255, 0.65);
+    font-weight: bolder; }
+
+.row:hover .fechas__dia__mes {
+  color: white;
+  transition: all .8s;
+  border-right: 5px solid #06aebc; }
+
+.row:hover .fechas__lugar p {
+  color: white;
+  transition: all .5s; }
+
+.row:hover .fechas__boton {
+  border: 2px solid #06aebc;
+  transition: all .8s;
+  box-shadow: none;
+  color: white;
+  background-color: #06adbca6; }
+
+@media (min-width: 700px) {
+  .fechas .fechas__dia__numero {
+    display: flex;
+    align-items: center; }
+    .fechas .fechas__dia__numero h4 {
+      font-family: "Oswald", sans-serif;
+      font-size: 3.8rem;
+      margin: 0;
+      padding: .45rem; }
+  .fechas .fechas__dia__mes {
+    display: flex;
+    flex-direction: column;
+    border-right: 5px solid white;
+    padding-right: 1.4rem;
+    font-size: 1.3rem;
+    font-weight: bolder;
+    margin-left: 1rem;
+    color: rgba(255, 255, 255, 0.65); }
+  .fechas .fechas__lugar p {
+    margin: 0;
+    margin-left: 2rem;
+    font-size: 1.5rem;
+    color: rgba(255, 255, 255, 0.65);
+    font-weight: bolder; }
+  .fechas .fechas__boton {
+    margin: 1rem; } }
+
+@media (min-width: 1000px) {
+  .fechas .fechas__dia__numero {
+    display: flex;
+    align-items: center; }
+    .fechas .fechas__dia__numero h4 {
+      font-family: "Oswald", sans-serif;
+      font-size: 3.8rem;
+      margin: 0;
+      padding: .45rem; }
+  .fechas .fechas__dia__mes {
+    display: flex;
+    flex-direction: column;
+    border-right: 5px solid white;
+    padding-right: 1.4rem;
+    font-size: 1.3rem;
+    font-weight: bolder;
+    margin-left: 1rem;
+    color: rgba(255, 255, 255, 0.65); }
+  .fechas .fechas__lugar p {
+    margin: 0;
+    margin-left: 2rem;
+    font-size: 2.2rem;
+    color: rgba(255, 255, 255, 0.65);
+    font-weight: bolder; } }
+
 img {
   width: 100%; }
 
@@ -327,10 +438,14 @@ img {
   background-size: cover; }
 
 .portada-fechas {
-  height: 100vh;
-  background-image: url(../multimedia/113_website_image_sktj_standard.jpg);
+  height: 65vh;
+  background-image: url(../multimedia/portadaindex.jpg);
   background-position: center;
   background-size: cover; }
+
+@media (min-width: 700px) {
+  .portada-fechas {
+    height: 100vh; } }
 
 .portada-noticias {
   height: 100vh;
@@ -720,7 +835,7 @@ ul {
   justify-content: space-around;
   align-items: center;
   background-image: url(../multimedia/fondo4.jpg);
-  height: 15em; }
+  height: 12em; }
 
 .bandalos__botones--estilos {
   border-radius: 2rem;
