--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
-$color__navitem: #06aebc;
-$color__navitem__hover:#056a74;
+$color__navitem: #c41d79e0;
+$color__navitem__hover:#800e4ce0;
 
 $box__shadow:20px 20px 20px -15px rgba(0,0,0,0.85);  
 
