--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -524,8 +524,8 @@ ul{
     font-family: 'Patua One', sans-serif;
     font-size: 2.4rem;
     letter-spacing: .2rem;
-    -webkit-text-stroke: 1px #554394;
-    color: rgba(84 ,31 ,60,0.8);
+    
+    color: #a21d98b8;
     text-shadow: 2.5px 2px 2px #17c5e0f0 ; 
     text-align: center;
     transform: translateY(4rem);
@@ -628,7 +628,7 @@ ul{
 
 .noticias__botones--estilos{
     border-radius: 0.4rem;
-    background-image: url(../multimedia/fondo1.jpg);
+    background-image: url(../multimedia/fondo3.png);
     background-position: center;
     background-size: cover;
     box-shadow: 4px 0px 7px 0px #8b9799f0;
