--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -37,7 +37,7 @@
     border: 1px solid black;  
 }
 .nav__boton:hover{
-    background-color: #3bdeec;
+    background-color: $color__navitem__hover;
     transform: scale(1.1);
     transition: 1s;
 }
@@ -62,6 +62,6 @@
     color: $color__navitem;  
 }
 #navbarNav .nav__items--estilos:hover{
-    color:#056a74;
+    color:$color__navitem__hover;
     transition: .7s;
 }
