--- a/scss/_video.scss
+++ b/scss/_video.scss
@@ -28,7 +28,7 @@
         color:  rgba(253, 253, 253, 0.65);
     }
     .videoclips__boton:hover{
-        color:rgba(253, 253, 253, 0.9);
+        color:#800e4d9d;
     }
     
 }
