ajuste de logo, img

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -22,8 +22,8 @@
     }
     
     .nav__logo:hover{
-        transform: scale(1.3);
-        transition: 1s;
+        transform: scale(1.05);
+        transition: .8s;
     }
 }
 .nav__items{
