--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,8 +22,8 @@
   .nav__logo {
     font-size: 1.5rem; }
   .nav__logo:hover {
-    transform: scale(1.3);
-    transition: 1s; } }
+    transform: scale(1.05);
+    transition: .8s; } }
 
 .nav__items {
   font-size: 1.4rem;
@@ -605,7 +605,7 @@ ul {
     height: 30rem;
     margin-bottom: 1.6rem;
     filter: grayscale(95%);
-    background-image: url(../multimedia/goy4.png);
+    background-image: url(../multimedia/goy-bandalos.jpg);
     background-size: cover;
     display: flex;
     align-items: center;
@@ -674,8 +674,7 @@ ul {
 
 .seccion__carousel {
   background-image: linear-gradient(343deg, #ca247156, #37c5b04d), url(../multimedia/fondo-textura-grunge_1048-9279.jpg);
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem; }
+  padding: 5rem 0; }
 
 .seccion__carousel--foto {
   width: 100%; }
