--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -213,7 +213,7 @@ ul{
         height: 30rem;
         margin-bottom: 1.6rem;
         filter: grayscale(95%);
-        background-image: url(../multimedia/goy4.png);
+        background-image: url(../multimedia/goy-bandalos.jpg);
         background-size: cover;
         display: flex;
         align-items: center;
@@ -294,8 +294,7 @@ ul{
     background-image: linear-gradient(343deg,#ca247156,#37c5b04d
     ),
     url(../multimedia/fondo-textura-grunge_1048-9279.jpg);
-    padding-top: 3.5rem;
-    padding-bottom: 3.5rem;
+    padding: 5rem 0;
 }
 
 .seccion__carousel--foto{
