ajuste de img bandalos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -614,7 +614,7 @@ ul {
     height: 30rem;
     margin-bottom: 1.6rem;
     filter: grayscale(95%);
-    background-image: url(../multimedia/gui-1-8.jpg);
+    background-image: url(../multimedia/gui-1-bandalos.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
