--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,14 +22,15 @@
   .nav__logo {
     font-size: 1.5rem; }
   .nav__logo:hover {
-    transform: scale(1.05);
+    transform: scale(1.03);
     transition: .8s; } }
 
 .nav__items {
   font-size: 1.4rem;
   font-family: 'Inconsolata', monospace;
   font-weight: bold;
-  color: #c41d79e0; }
+  color: #c41d79e0;
+  text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.5); }
 
 .nav__boton {
   background-color: #c41d79e0;
@@ -56,7 +57,7 @@
   color: #c41d79e0; }
 
 #navbarNav .nav__items--estilos:hover {
-  color: #800e4ce0;
+  color: white;
   transition: .7s; }
 
 .icono-footer {
@@ -324,7 +325,7 @@
     top: 0; } }
 
 .fechas {
-  background-image: url(../multimedia/gui-2-3.jpg);
+  background-image: url(../multimedia/goyo-20.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
@@ -383,31 +384,33 @@
   background-color: #800e4da1; }
 
 @media (min-width: 700px) {
-  .fechas .fechas__dia__numero {
-    display: flex;
-    align-items: center; }
-    .fechas .fechas__dia__numero h4 {
-      font-family: "Oswald", sans-serif;
-      font-size: 3.8rem;
+  .fechas {
+    background-image: url(../multimedia/gui-2-3.jpg); }
+    .fechas .fechas__dia__numero {
+      display: flex;
+      align-items: center; }
+      .fechas .fechas__dia__numero h4 {
+        font-family: "Oswald", sans-serif;
+        font-size: 3.8rem;
+        margin: 0;
+        padding: .45rem; }
+    .fechas .fechas__dia__mes {
+      display: flex;
+      flex-direction: column;
+      border-right: 5px solid white;
+      padding-right: 1.4rem;
+      font-size: 1.3rem;
+      font-weight: bolder;
+      margin-left: 1rem;
+      color: rgba(255, 255, 255, 0.65); }
+    .fechas .fechas__lugar p {
       margin: 0;
-      padding: .45rem; }
-  .fechas .fechas__dia__mes {
-    display: flex;
-    flex-direction: column;
-    border-right: 5px solid white;
-    padding-right: 1.4rem;
-    font-size: 1.3rem;
-    font-weight: bolder;
-    margin-left: 1rem;
-    color: rgba(255, 255, 255, 0.65); }
-  .fechas .fechas__lugar p {
-    margin: 0;
-    margin-left: 2rem;
-    font-size: 1.5rem;
-    color: rgba(255, 255, 255, 0.65);
-    font-weight: bolder; }
-  .fechas .fechas__boton {
-    margin: 1rem; } }
+      margin-left: 2rem;
+      font-size: 1.5rem;
+      color: rgba(255, 255, 255, 0.65);
+      font-weight: bolder; }
+    .fechas .fechas__boton {
+      margin: 1rem; } }
 
 @media (min-width: 1000px) {
   .fechas .fechas__dia__numero {
@@ -434,6 +437,12 @@
     color: rgba(255, 255, 255, 0.65);
     font-weight: bolder; } }
 
+.sepacion__fechas {
+  background-image: url(../multimedia/division-arriba.png);
+  height: 5rem;
+  background-repeat: no-repeat;
+  transform: translateY(1.8rem); }
+
 img {
   width: 100%; }
 
@@ -441,30 +450,35 @@ img {
   height: 100vh;
   background-image: url(../multimedia/img38.jpg);
   background-position: center;
-  background-size: cover; }
+  background-size: cover;
+  background-attachment: fixed; }
 
 @media (max-width: 900px) {
   .portada {
-    height: 92vh; } }
+    height: 92vh; }
+  background-attachment: fixed; }
 
 .portada-bandalos {
   height: 100vh;
   background-image: url(../multimedia/goy10.jpg);
   background-position: center;
-  background-size: cover; }
+  background-size: cover;
+  background-attachment: fixed; }
 
 .portada-musica {
   height: 100vh;
   width: 100%;
   background-image: url(../multimedia/gui-1-7.jpg);
   background-position: center;
-  background-size: cover; }
+  background-size: cover;
+  background-attachment: fixed; }
 
 .portada-fechas {
   height: 65vh;
   background-image: url(../multimedia/portadaindex.jpg);
   background-position: center;
-  background-size: cover; }
+  background-size: cover;
+  background-attachment: fixed; }
 
 @media (min-width: 700px) {
   .portada-fechas {
@@ -474,7 +488,21 @@ img {
   height: 100vh;
   background-image: url(../multimedia/img36.jpg);
   background-position: center;
-  background-size: cover; }
+  background-size: cover;
+  background-attachment: fixed; }
+
+.portada-videoclips {
+  height: 100vh;
+  background-image: url(../multimedia/img27.jpg);
+  background-position-x: -10rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; }
+
+@media (min-width: 600px) {
+  .portada-videoclips {
+    background-attachment: fixed;
+    background-position-x: 0; } }
 
 ul {
   list-style-type: none; }
@@ -501,7 +529,7 @@ ul {
 #bandalo1 {
   grid-area: goyo;
   filter: grayscale(95%);
-  background-image: url(../multimedia/goy4.png);
+  background-image: url(../multimedia/goy-bandalos.jpg);
   background-size: cover;
   display: flex;
   align-items: center;
@@ -521,7 +549,7 @@ ul {
 #bandalo2 {
   grid-area: bandalo2;
   filter: grayscale(95%);
-  background-image: url(../multimedia/gui-1-8.jpg);
+  background-image: url(../multimedia/gui-1-bandalos.jpg);
   background-size: cover;
   box-shadow: 20px 20px 20px -15px rgba(0, 0, 0, 0.85); }
 
@@ -573,7 +601,7 @@ ul {
 #bandalo6 {
   grid-area: bandalo6;
   filter: grayscale(95%);
-  background-image: url(../multimedia/sax1.jpg);
+  background-image: url(../multimedia/sax-bandalos.jpg);
   background-size: cover;
   background-position: center;
   box-shadow: 20px 20px 20px -15px rgba(0, 0, 0, 0.85); }
@@ -654,7 +682,7 @@ ul {
     height: 30rem;
     margin-bottom: 1.6rem;
     filter: grayscale(95%);
-    background-image: url(../multimedia/sax1.jpg);
+    background-image: url(../multimedia/sax-bandalos.jpg);
     background-size: cover;
     background-position: center;
     background-position: center;
@@ -923,3 +951,6 @@ ul {
   transform: scale(1.1);
   color: white;
   transition: .7s; }
+
+.btn {
+  padding: .84rem 1.5rem; }
