--- a/css/estilos.css
+++ b/css/estilos.css
@@ -95,23 +95,23 @@
 .footer--estilo {
   background-color: #800e4ce0; }
 
-.prueba__carta {
+.seccion__noticias {
   margin-bottom: 3rem; }
-  .prueba__carta .row {
+  .seccion__noticias .row {
     max-width: 100rem;
     margin: 50px auto 0; }
   @media (min-width: 700px) {
-    .prueba__carta .row {
+    .seccion__noticias .row {
       max-width: 100rem;
       margin: 0 3.5rem; } }
-  .prueba__carta .card {
+  .seccion__noticias .card {
     margin-bottom: 2rem;
     width: 100%; }
-    .prueba__carta .card .menu-content li {
+    .seccion__noticias .card .menu-content li {
       display: inline-block; }
-    .prueba__carta .card .menu-content a {
+    .seccion__noticias .card .menu-content a {
       color: #fff; }
-    .prueba__carta .card .menu-content span {
+    .seccion__noticias .card .menu-content span {
       position: absolute;
       left: 50%;
       top: 0;
@@ -119,82 +119,82 @@
       font-weight: 700;
       font-family: 'Open Sans';
       transform: translate(-50%, 0); }
-    .prueba__carta .card .noticia__carta--1, .prueba__carta .card .noticia__carta--2, .prueba__carta .card .noticia__carta--3 {
+    .seccion__noticias .card .noticia__carta--1, .seccion__noticias .card .noticia__carta--2, .seccion__noticias .card .noticia__carta--3 {
       background-color: #fff;
-      min-height: 420px;
+      min-height: 21rem;
       position: relative;
       overflow: hidden;
       box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2); }
-      .prueba__carta .card .noticia__carta--1:hover .data, .prueba__carta .card .noticia__carta--2:hover .data, .prueba__carta .card .noticia__carta--3:hover .data {
+      .seccion__noticias .card .noticia__carta--1:hover .data, .seccion__noticias .card .noticia__carta--2:hover .data, .seccion__noticias .card .noticia__carta--3:hover .data {
         transform: translateY(0); }
-    .prueba__carta .card .data {
+    .seccion__noticias .card .data {
       position: absolute;
       bottom: 0;
       width: 100%;
-      transform: translateY(calc(70px + 1em));
+      transform: translateY(7.5rem);
       transition: transform 0.3s; }
-      .prueba__carta .card .data .content {
+      .seccion__noticias .card .data .content {
         padding: 1em;
         position: relative;
         z-index: 1; }
-    .prueba__carta .card .author {
+    .seccion__noticias .card .author {
       font-size: 12px; }
-    .prueba__carta .card .title {
+    .seccion__noticias .card .title {
       margin-top: 10px; }
-    .prueba__carta .card .text {
+    .seccion__noticias .card .text {
       height: 70px;
       margin: 0; }
-    .prueba__carta .card input[type='checkbox'] {
+    .seccion__noticias .card input[type='checkbox'] {
       display: none; }
-    .prueba__carta .card input[type='checkbox']:checked + .menu-content {
-      transform: translateY(-60px); }
-  .prueba__carta .noticia__carta .noticia__carta--1 {
+    .seccion__noticias .card input[type='checkbox']:checked + .menu-content {
+      transform: translateY(-80px); }
+  .seccion__noticias .noticia__carta .noticia__carta--1 {
     background-image: url(../multimedia/nota-1.jpg);
     background-size: contain;
     background-repeat: no-repeat; }
-  .prueba__carta .noticia__carta .noticia__carta--2 {
+  .seccion__noticias .noticia__carta .noticia__carta--2 {
     background-image: url(../multimedia/nota-2.jpg);
     background-size: contain;
     background-repeat: no-repeat; }
-  .prueba__carta .noticia__carta .noticia__carta--3 {
+  .seccion__noticias .noticia__carta .noticia__carta--3 {
     background-image: url(../multimedia/nota-3.jpg);
     background-size: contain;
     background-repeat: no-repeat; }
   @media (min-width: 700px) {
-    .prueba__carta .noticia__carta .noticia__carta--1 {
+    .seccion__noticias .noticia__carta .noticia__carta--1 {
       background-image: url(../multimedia/nota-1.jpg);
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center; }
-    .prueba__carta .noticia__carta .noticia__carta--2 {
+    .seccion__noticias .noticia__carta .noticia__carta--2 {
       background-image: url(../multimedia/nota-2.jpg);
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center; }
-    .prueba__carta .noticia__carta .noticia__carta--3 {
+    .seccion__noticias .noticia__carta .noticia__carta--3 {
       background-image: url(../multimedia/nota-3.jpg);
       background-size: cover;
       background-repeat: no-repeat;
       background-position: bottom;
       background-position-y: -3rem; } }
-  .prueba__carta .noticia__carta .date {
+  .seccion__noticias .noticia__carta .date {
     position: absolute;
     top: 0;
     left: 0;
     background-color: #800e4daf;
     color: #fff;
     padding: 0.5em; }
-    .prueba__carta .noticia__carta .date span {
+    .seccion__noticias .noticia__carta .date span {
       display: block;
       text-align: center; }
-    .prueba__carta .noticia__carta .date .day {
+    .seccion__noticias .noticia__carta .date .day {
       font-weight: 700;
       font-size: 1.2rem;
       text-shadow: 2px 3px 2px rgba(0, 0, 0, 0.18); }
-  .prueba__carta .noticia__carta .content {
+  .seccion__noticias .noticia__carta .content {
     background-color: #fff;
     box-shadow: 0 5px 30px 10px rgba(0, 0, 0, 0.3); }
-  .prueba__carta .noticia__carta .title a {
+  .seccion__noticias .noticia__carta .title a {
     color: gray; }
 
 .musica {
