--- a/scss/_fechas.scss
+++ b/scss/_fechas.scss
@@ -2,7 +2,8 @@
     background-image: url(../multimedia/goyo-20.jpg);
     background-attachment: fixed;
     background-size: cover;
-    background-position: center;
+    background-position-y: -2rem;
+    background-size: 100vh;
     height: 100%;
     .row{
         background-color: rgba(37, 41, 39, 0.5);
