--- a/scss/_video.scss
+++ b/scss/_video.scss
@@ -5,7 +5,7 @@
     }
     .videos__portada--estilos:hover{
         transform: scale(1.02);
-        transition: 1s;
+        transition: .4s;
     }
     .video__carta{
         padding-right: 1.2rem;
