--- a/css/estilos.css
+++ b/css/estilos.css
@@ -325,7 +325,7 @@
     top: 0; } }
 
 .fechas {
-  background-image: url(../multimedia/fondo-fechas.jpg);
+  background-image: url(../multimedia/goyo-20.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
