--- a/scss/_fechas.scss
+++ b/scss/_fechas.scss
@@ -1,5 +1,5 @@
 .fechas{
-    background-image: url(../multimedia/fondo-fechas.jpg);
+    background-image: url(../multimedia/goyo-20.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
