--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -31,6 +31,14 @@
 
 #footer a{
     color: whitesmoke;
+    font-family: "Inconsolata", sans-serif;
+    font-size: bolder;
+}
+ 
+#footer a:hover{
+    color: white;
+    transform: scale(1.025);
+    
 }
 
 .footer--estilo{
