--- a/scss/_fechas.scss
+++ b/scss/_fechas.scss
@@ -1,7 +1,6 @@
 .fechas{
-    background-image: url(../multimedia/goyo-20.jpg);
-    background-attachment: fixed;
-    background-size: cover;
+    background: rgb(8,81,111);
+    background: linear-gradient(10deg, rgba(8,81,111,0.5505077030812324) 13%, rgba(60,38,80,1) 51%, rgba(3,86,120,0.8698354341736695) 65%, rgba(74,63,84,0.864233193277311) 95%);
     background-position: center;
     height: 100%;
     .row{
@@ -78,6 +77,9 @@
 @media (min-width:700px){
     .fechas{
         background-image: url(../multimedia/gui-2-3.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
         .fechas__dia__numero{
             display: flex;
             align-items: center;
