--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,5 +8,4 @@ $san-juan: #2d4e68;
 $bermuda: #249abebd;
 $white: #fff;
 $black: #000;
-$open-sans: 'Open Sans',
-sans-serif;
+$open-sans: 'Open Sans', sans-serif;
