--- a/scss/_fechas.scss
+++ b/scss/_fechas.scss
@@ -6,6 +6,8 @@
     .row{
         background-color: rgba(37, 41, 39, 0.5);
         color: white;
+        margin-left: .1rem;
+        margin-right: .1rem; 
     }
     .fechas__dia{
         
