--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -29,15 +29,19 @@
     transition: .3s;
 }
 
-#footer a{
+#footer {
+    font-size: 1.1rem;
+    a{
     color: whitesmoke;
     font-family: "Inconsolata", sans-serif;
-    font-size: bolder;
+    
+    }
+    a:hover{
+    color:white;
+    letter-spacing: .07rem;
+    transition: all .3s;
 }
  
-#footer a:hover{
-    color: white;
-    transform: scale(1.025);
     
 }
 
